-- 执行顺序：先执行 V001__init.sql，再执行 V002__seed.sql
CREATE TABLE IF NOT EXISTS sjc_role (
  id BIGINT PRIMARY KEY AUTO_INCREMENT,
  role_code VARCHAR(64) NOT NULL UNIQUE,
  role_name VARCHAR(64) NOT NULL,
  role_desc VARCHAR(255) DEFAULT NULL,
  is_delete TINYINT NOT NULL DEFAULT 0,
  create_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
  update_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

CREATE TABLE IF NOT EXISTS sjc_user_role (
  id BIGINT PRIMARY KEY AUTO_INCREMENT,
  sys_user_id BIGINT NOT NULL,
  role_id BIGINT NOT NULL,
  is_delete TINYINT NOT NULL DEFAULT 0,
  create_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
  update_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  UNIQUE KEY uk_sys_user_role (sys_user_id, role_id),
  KEY idx_role_id (role_id)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

CREATE TABLE IF NOT EXISTS sjc_material (
  id BIGINT PRIMARY KEY AUTO_INCREMENT,
  material_name VARCHAR(128) NOT NULL,
  material_type VARCHAR(64) NOT NULL,
  spec VARCHAR(128) DEFAULT NULL,
  unit VARCHAR(32) NOT NULL,
  shelf_life_days INT DEFAULT NULL,
  warn_threshold DECIMAL(18,2) NOT NULL DEFAULT 0,
  is_delete TINYINT NOT NULL DEFAULT 0,
  create_by BIGINT DEFAULT NULL,
  update_by BIGINT DEFAULT NULL,
  create_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
  update_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  KEY idx_material_type (material_type)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

CREATE TABLE IF NOT EXISTS sjc_warehouse (
  id BIGINT PRIMARY KEY AUTO_INCREMENT,
  warehouse_name VARCHAR(128) NOT NULL,
  address VARCHAR(255) DEFAULT NULL,
  longitude DECIMAL(10,6) DEFAULT NULL,
  latitude DECIMAL(10,6) DEFAULT NULL,
  contact_name VARCHAR(64) DEFAULT NULL,
  contact_phone VARCHAR(32) DEFAULT NULL,
  capacity DECIMAL(18,2) NOT NULL DEFAULT 0,
  is_delete TINYINT NOT NULL DEFAULT 0,
  create_by BIGINT DEFAULT NULL,
  update_by BIGINT DEFAULT NULL,
  create_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
  update_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

CREATE TABLE IF NOT EXISTS sjc_inventory (
  id BIGINT PRIMARY KEY AUTO_INCREMENT,
  warehouse_id BIGINT NOT NULL,
  material_id BIGINT NOT NULL,
  qty_total DECIMAL(18,2) NOT NULL DEFAULT 0,
  qty_available DECIMAL(18,2) NOT NULL DEFAULT 0,
  qty_locked DECIMAL(18,2) NOT NULL DEFAULT 0,
  last_change_time DATETIME DEFAULT NULL,
  is_delete TINYINT NOT NULL DEFAULT 0,
  create_by BIGINT DEFAULT NULL,
  update_by BIGINT DEFAULT NULL,
  create_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
  update_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  UNIQUE KEY uk_inventory (warehouse_id, material_id),
  KEY idx_material (material_id)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

CREATE TABLE IF NOT EXISTS sjc_inventory_flow (
  id BIGINT PRIMARY KEY AUTO_INCREMENT,
  biz_no VARCHAR(64) NOT NULL,
  warehouse_id BIGINT NOT NULL,
  material_id BIGINT NOT NULL,
  flow_type VARCHAR(32) NOT NULL COMMENT 'INBOUND/OUTBOUND/TRANSFER/CHECK/LOSS',
  status VARCHAR(32) NOT NULL DEFAULT 'DONE' COMMENT 'PENDING/APPROVED/REJECTED/DONE',
  qty DECIMAL(18,2) NOT NULL,
  before_qty DECIMAL(18,2) NOT NULL DEFAULT 0,
  after_qty DECIMAL(18,2) NOT NULL DEFAULT 0,
  remark VARCHAR(255) DEFAULT NULL,
  audit_by BIGINT DEFAULT NULL,
  audit_time DATETIME DEFAULT NULL,
  is_delete TINYINT NOT NULL DEFAULT 0,
  create_by BIGINT DEFAULT NULL,
  update_by BIGINT DEFAULT NULL,
  create_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
  update_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  KEY idx_flow_filter (warehouse_id, material_id, flow_type, status),
  KEY idx_create_time (create_time),
  UNIQUE KEY uk_biz_no (biz_no)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

CREATE TABLE IF NOT EXISTS sjc_alert (
  id BIGINT PRIMARY KEY AUTO_INCREMENT,
  alert_type VARCHAR(64) NOT NULL,
  alert_level VARCHAR(32) NOT NULL,
  status VARCHAR(32) NOT NULL DEFAULT 'UNCONFIRMED',
  warehouse_id BIGINT DEFAULT NULL,
  material_id BIGINT DEFAULT NULL,
  trigger_value DECIMAL(18,2) DEFAULT NULL,
  threshold_value DECIMAL(18,2) DEFAULT NULL,
  alert_message VARCHAR(255) NOT NULL,
  ack_by BIGINT DEFAULT NULL,
  ack_time DATETIME DEFAULT NULL,
  process_by BIGINT DEFAULT NULL,
  process_time DATETIME DEFAULT NULL,
  is_delete TINYINT NOT NULL DEFAULT 0,
  create_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
  update_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  KEY idx_alert_status (status),
  KEY idx_alert_time (create_time)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

CREATE TABLE IF NOT EXISTS sjc_dispatch_task (
  id BIGINT PRIMARY KEY AUTO_INCREMENT,
  task_no VARCHAR(64) NOT NULL UNIQUE,
  from_warehouse_id BIGINT NOT NULL,
  demand_point_name VARCHAR(128) NOT NULL,
  demand_address VARCHAR(255) DEFAULT NULL,
  demand_longitude DECIMAL(10,6) DEFAULT NULL,
  demand_latitude DECIMAL(10,6) DEFAULT NULL,
  status VARCHAR(32) NOT NULL DEFAULT 'PENDING',
  progress_percent INT NOT NULL DEFAULT 0,
  planned_depart_time DATETIME DEFAULT NULL,
  planned_arrive_time DATETIME DEFAULT NULL,
  actual_depart_time DATETIME DEFAULT NULL,
  actual_arrive_time DATETIME DEFAULT NULL,
  remark VARCHAR(255) DEFAULT NULL,
  is_delete TINYINT NOT NULL DEFAULT 0,
  create_by BIGINT DEFAULT NULL,
  update_by BIGINT DEFAULT NULL,
  create_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
  update_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  KEY idx_dispatch_status (status)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

CREATE TABLE IF NOT EXISTS sjc_dispatch_task_item (
  id BIGINT PRIMARY KEY AUTO_INCREMENT,
  task_id BIGINT NOT NULL,
  material_id BIGINT NOT NULL,
  qty DECIMAL(18,2) NOT NULL,
  unit VARCHAR(32) NOT NULL,
  is_delete TINYINT NOT NULL DEFAULT 0,
  create_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
  update_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  KEY idx_task_id (task_id)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

CREATE TABLE IF NOT EXISTS sjc_dispatch_track (
  id BIGINT PRIMARY KEY AUTO_INCREMENT,
  task_id BIGINT NOT NULL,
  longitude DECIMAL(10,6) NOT NULL,
  latitude DECIMAL(10,6) NOT NULL,
  track_time DATETIME NOT NULL,
  is_delete TINYINT NOT NULL DEFAULT 0,
  create_time DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
  KEY idx_task_track_time (task_id, track_time)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;
