erDiagram
  SJC_WAREHOUSE ||--o{ SJC_INVENTORY : has
  SJC_MATERIAL ||--o{ SJC_INVENTORY : has
  SJC_INVENTORY ||--o{ SJC_INVENTORY_FLOW : writes
  SJC_DISPATCH_TASK ||--o{ SJC_DISPATCH_TRACK : has
  SJC_DISPATCH_TASK ||--o{ SJC_DISPATCH_TASK_LOG : changes
  SJC_USER_WAREHOUSE }o--|| SQ_SYSTEM_USER : maps
